Fix light syntax highlighting affecting dark mode

--- a/_includes/syntax-highlighting.css
+++ b/_includes/syntax-highlighting.css
@@ -4,66 +4,66 @@
  * [1]: https://github.com/mojombo/tpw/blob/master/css/syntax.css
  * [2]: https://jekyllrb.com/docs/liquid/tags/#code-snippet-highlighting
  */
-.highlight { background: #f8f8f8; }
-.highlight .c { color: #999988; font-style: italic }
-.highlight .err { color: #a61717; background-color: #e3d2d2 }
-.highlight .k { font-weight: bold }
-.highlight .o { font-weight: bold }
-.highlight .cm { color: #999988; font-style: italic }
-.highlight .cp { color: #999999; font-weight: bold }
-.highlight .c1 { color: #999988; font-style: italic }
-.highlight .cs { color: #999999; font-weight: bold; font-style: italic }
-.highlight .gd { color: #000000; background-color: #ffdddd }
-.highlight .gd .x { color: #000000; background-color: #ffaaaa }
-.highlight .ge { font-style: italic }
-.highlight .gr { color: #aa0000 }
-.highlight .gh { color: #999999 }
-.highlight .gi { color: #000000; background-color: #ddffdd }
-.highlight .gi .x { color: #000000; background-color: #aaffaa }
-.highlight .go { color: #888888 }
-.highlight .gp { color: #555555 }
-.highlight .gs { font-weight: bold }
-.highlight .gu { color: #aaaaaa }
-.highlight .gt { color: #aa0000 }
-.highlight .kc { font-weight: bold }
-.highlight .kd { font-weight: bold }
-.highlight .kp { font-weight: bold }
-.highlight .kr { font-weight: bold }
-.highlight .kt { color: #445588; font-weight: bold }
-.highlight .m { color: #009999 }
-.highlight .s { color: #d14 }
-.highlight .na { color: #008080 }
-.highlight .nb { color: #0086B3 }
-.highlight .nc { color: #445588; font-weight: bold }
-.highlight .no { color: #008080 }
-.highlight .ni { color: #800080 }
-.highlight .ne { color: #990000; font-weight: bold }
-.highlight .nf { color: #990000; font-weight: bold }
-.highlight .nn { color: #555555 }
-.highlight .nt { color: #000080 }
-.highlight .nv { color: #008080 }
-.highlight .ow { font-weight: bold }
-.highlight .w { color: #bbbbbb }
-.highlight .mf { color: #009999 }
-.highlight .mh { color: #009999 }
-.highlight .mi { color: #009999 }
-.highlight .mo { color: #009999 }
-.highlight .sb { color: #d14 }
-.highlight .sc { color: #d14 }
-.highlight .sd { color: #d14 }
-.highlight .s2 { color: #d14 }
-.highlight .se { color: #d14 }
-.highlight .sh { color: #d14 }
-.highlight .si { color: #d14 }
-.highlight .sx { color: #d14 }
-.highlight .sr { color: #009926 }
-.highlight .s1 { color: #d14 }
-.highlight .ss { color: #990073 }
-.highlight .bp { color: #999999 }
-.highlight .vc { color: #008080 }
-.highlight .vg { color: #008080 }
-.highlight .vi { color: #008080 }
-.highlight .il { color: #009999 }
+body.light .highlight { background: #f8f8f8; }
+body.light .highlight .c { color: #999988; font-style: italic }
+body.light .highlight .err { color: #a61717; background-color: #e3d2d2 }
+body.light .highlight .k { font-weight: bold }
+body.light .highlight .o { font-weight: bold }
+body.light .highlight .cm { color: #999988; font-style: italic }
+body.light .highlight .cp { color: #999999; font-weight: bold }
+body.light .highlight .c1 { color: #999988; font-style: italic }
+body.light .highlight .cs { color: #999999; font-weight: bold; font-style: italic }
+body.light .highlight .gd { color: #000000; background-color: #ffdddd }
+body.light .highlight .gd .x { color: #000000; background-color: #ffaaaa }
+body.light .highlight .ge { font-style: italic }
+body.light .highlight .gr { color: #aa0000 }
+body.light .highlight .gh { color: #999999 }
+body.light .highlight .gi { color: #000000; background-color: #ddffdd }
+body.light .highlight .gi .x { color: #000000; background-color: #aaffaa }
+body.light .highlight .go { color: #888888 }
+body.light .highlight .gp { color: #555555 }
+body.light .highlight .gs { font-weight: bold }
+body.light .highlight .gu { color: #aaaaaa }
+body.light .highlight .gt { color: #aa0000 }
+body.light .highlight .kc { font-weight: bold }
+body.light .highlight .kd { font-weight: bold }
+body.light .highlight .kp { font-weight: bold }
+body.light .highlight .kr { font-weight: bold }
+body.light .highlight .kt { color: #445588; font-weight: bold }
+body.light .highlight .m { color: #009999 }
+body.light .highlight .s { color: #d14 }
+body.light .highlight .na { color: #008080 }
+body.light .highlight .nb { color: #0086B3 }
+body.light .highlight .nc { color: #445588; font-weight: bold }
+body.light .highlight .no { color: #008080 }
+body.light .highlight .ni { color: #800080 }
+body.light .highlight .ne { color: #990000; font-weight: bold }
+body.light .highlight .nf { color: #990000; font-weight: bold }
+body.light .highlight .nn { color: #555555 }
+body.light .highlight .nt { color: #000080 }
+body.light .highlight .nv { color: #008080 }
+body.light .highlight .ow { font-weight: bold }
+body.light .highlight .w { color: #bbbbbb }
+body.light .highlight .mf { color: #009999 }
+body.light .highlight .mh { color: #009999 }
+body.light .highlight .mi { color: #009999 }
+body.light .highlight .mo { color: #009999 }
+body.light .highlight .sb { color: #d14 }
+body.light .highlight .sc { color: #d14 }
+body.light .highlight .sd { color: #d14 }
+body.light .highlight .s2 { color: #d14 }
+body.light .highlight .se { color: #d14 }
+body.light .highlight .sh { color: #d14 }
+body.light .highlight .si { color: #d14 }
+body.light .highlight .sx { color: #d14 }
+body.light .highlight .sr { color: #009926 }
+body.light .highlight .s1 { color: #d14 }
+body.light .highlight .ss { color: #990073 }
+body.light .highlight .bp { color: #999999 }
+body.light .highlight .vc { color: #008080 }
+body.light .highlight .vg { color: #008080 }
+body.light .highlight .vi { color: #008080 }
+body.light .highlight .il { color: #009999 }
 
 /* This is the Monokai scheme from [1], but I changed the background color from #272822 to
  * #150f1c and all occurences of #f8f8f2 to #ccc.
